Bug 34247 - [4.3 Regression] ICE in omp_add_variable, at gimplify.c:4677
Summary: [4.3 Regression] ICE in omp_add_variable, at gimplify.c:4677
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.3.0
: P3 normal
Target Milestone: 4.3.0
Assignee: Jakub Jelinek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-27 12:11 UTC by H.J. Lu
Modified: 2007-11-28 19:45 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2007-11-28 10:17:11


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2007-11-27 12:11:33 UTC
From

http://gcc.gnu.org/ml/gcc-testresults/2007-11/msg01452.html

FAIL: libgomp.fortran/character1.f90  -O0  (internal compiler error)
FAIL: libgomp.fortran/character1.f90  -O0  (test for excess errors)
WARNING: libgomp.fortran/character1.f90  -O0  compilation failed to produce executable
...

libgomp.fortran/vla1.f90:76: internal compiler error: in omp_add_variable, at gimplify.c:4677
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.
Comment 1 H.J. Lu 2007-11-27 13:20:52 UTC
Revision 130371:

http://gcc.gnu.org/ml/gcc-cvs/2007-11/msg00566.html

is the cause.
Comment 2 Andrew Pinski 2007-11-27 18:28:06 UTC
patch:
http://gcc.gnu.org/ml/gcc-patches/2007-11/msg01449.html

so you don't read the patches list.
Comment 3 Jakub Jelinek 2007-11-28 19:43:20 UTC
Subject: Bug 34247

Author: jakub
Date: Wed Nov 28 19:43:03 2007
New Revision: 130492

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=130492
Log:
	* trans-expr.c (gfc_trans_string_copy): Convert both dest and
	src to void *.

	PR fortran/34247
	* trans-openmp.c (gfc_omp_privatize_by_reference): For REFERENCE_TYPE
	pass by reference only PARM_DECLs or non-artificial decls.

Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/trans-expr.c
    trunk/gcc/fortran/trans-openmp.c

Comment 4 Jakub Jelinek 2007-11-28 19:45:25 UTC
Fixed.