	* trans-expr.c (gfc_trans_string_copy): Convert both dest and 	src to void *.

PR fortran/34247
	* trans-openmp.c (gfc_omp_privatize_by_reference): For REFERENCE_TYPE
	pass by reference only PARM_DECLs or non-artificial decls.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130492 138bc75d-0d04-0410-961f-82ee72b054a4